--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this app</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
